--- a/CielWindow.fxml
+++ b/CielWindow.fxml
@@ -8,15 +8,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <Button mnemonicParsing="false" text="Button" BorderPane.alignment="TOP_CENTER" />
-   </top>
    <center>
-      <ScrollPane fx:id="cielScrolPane" cacheHint="QUALITY" prefHeight="679.0" prefViewportHeight="639.0" prefViewportWidth="968.0" prefWidth="1025.0" BorderPane.alignment="CENTER">
+      <ScrollPane fx:id="cielScrolPane" cacheHint="QUALITY" fitToHeight="true" fitToWidth="true" prefHeight="679.0" prefViewportHeight="400.0" prefViewportWidth="300.0" prefWidth="1025.0" BorderPane.alignment="CENTER">
          <content>
-            <Pane fx:id="cielArea" cacheHint="QUALITY" />
+            <VBox fx:id="cielBox" alignment="CENTER">
+               <children>
+                  <Group>
+                     <children>
+                        <Pane fx:id="cielArea" cacheHint="QUALITY" prefHeight="1000.0" prefWidth="2000.0" />
+                     </children>
+                  </Group>
+               </children>
+            </VBox>
          </content>
       </ScrollPane>
    </center>
