--- a/Etoile.fxml
+++ b/Etoile.fxml
@@ -6,22 +6,32 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <StackPane fx:id="etoileView" cache="true" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane fx:id="backgroundPane" cache="true" />
       <HBox cache="true" spacing="10.0">
          <children>
-            <StackPane fx:id="primaryView" cache="true" prefHeight="96.0" prefWidth="109.0">
+            <VBox alignment="CENTER">
                <children>
-                  <Ellipse fx:id="etoileShape" cache="true" cacheHint="QUALITY" fill="DODGERBLUE" radiusX="60.0" radiusY="48.0" stroke="BLACK" strokeType="INSIDE" />
-                  <Label fx:id="name" cache="true" text="Label">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </Label>
+                  <Region />
+                  <StackPane fx:id="primaryView" cache="true" prefHeight="96.0" prefWidth="109.0">
+                     <children>
+                        <Ellipse fx:id="etoileShape" cache="true" cacheHint="QUALITY" fill="#3da1ff" radiusX="60.0" radiusY="48.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+                        <TextField id="nameField" fx:id="nameField" alignment="CENTER" style="-fx-background-color: ;" text="Label">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
+                        </TextField>
+                        <Label fx:id="name" text="Label" textFill="WHITE">
+                           <font>
+                              <Font size="21.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </StackPane>
+                  <Region />
                </children>
-            </StackPane>
+            </VBox>
             <VBox fx:id="childArea" cache="true" spacing="10.0" />
          </children>
       </HBox>
