--- a/EtoileSub.fxml
+++ b/EtoileSub.fxml
@@ -1,23 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.shape.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <StackPane fx:id="etoileView" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane fx:id="backgroundPane" />
       <HBox spacing="10.0">
          <children>
-            <StackPane fx:id="primaryView">
+            <VBox alignment="CENTER">
                <children>
-                  <Ellipse fx:id="etoileShape" fill="#b6dcff" radiusX="34.0" radiusY="14.0" stroke="BLACK" strokeType="INSIDE" />
-                  <Label fx:id="name" text="Label" />
+                  <Region />
+                  <StackPane fx:id="primaryView">
+                     <children>
+                        <Ellipse fx:id="etoileShape" fill="#b6dcff" radiusX="44.0" radiusY="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+                        <TextField id="nameField" fx:id="nameField" alignment="CENTER" prefHeight="22.0" prefWidth="68.0" text="Label">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </TextField>
+                        <Label fx:id="name" text="Label" textFill="#4072e8">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </StackPane>
+                  <Region />
                </children>
-            </StackPane>
+            </VBox>
             <VBox fx:id="childArea" spacing="10.0" />
          </children>
       </HBox>
