--- a/Etoile.fxml
+++ b/Etoile.fxml
@@ -17,7 +17,7 @@
                   <StackPane fx:id="primaryView" cache="true" prefHeight="96.0" prefWidth="109.0">
                      <children>
                         <Ellipse fx:id="etoileShape" cache="true" cacheHint="QUALITY" fill="#ffaaa5" radiusX="60.0" radiusY="48.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
-                        <TextField id="nameField" fx:id="nameField" alignment="CENTER" style="-fx-background-color: ;" text="Label">
+                        <TextField id="nameField" fx:id="nameField" alignment="CENTER" text="Label">
                            <font>
                               <Font size="21.0" />
                            </font>
