--- a/EtoileMain.fxml
+++ b/EtoileMain.fxml
@@ -6,12 +6,12 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox fx:id="etoileView" cache="true" spacing="8.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox fx:id="etoileView" cache="true" pickOnBounds="false" spacing="8.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="CENTER">
+      <VBox alignment="CENTER" pickOnBounds="false">
          <children>
-            <Region />
-            <StackPane fx:id="primaryView" cache="true">
+            <Region pickOnBounds="false" />
+            <StackPane fx:id="primaryView" cache="true" pickOnBounds="false">
                <children>
                   <Ellipse fx:id="etoileShape" cache="true" cacheHint="QUALITY" fill="#ffaaa5" radiusX="50.0" radiusY="40.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
                   <TextField id="nameField" fx:id="nameField" alignment="CENTER" prefHeight="44.0" prefWidth="55.0" text="Label">
@@ -26,9 +26,9 @@
                   </Label>
                </children>
             </StackPane>
-            <Region />
+            <Region pickOnBounds="false" />
          </children>
       </VBox>
-      <VBox fx:id="childArea" cache="true" />
+      <VBox fx:id="childArea" cache="true" pickOnBounds="false" />
    </children>
 </HBox>
