--- a/EtoileSub.fxml
+++ b/EtoileSub.fxml
@@ -15,12 +15,12 @@
             <StackPane fx:id="primaryView" pickOnBounds="false">
                <children>
                   <Ellipse fx:id="etoileShape" fill="#b6dcff" radiusX="44.0" radiusY="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
-                  <TextField id="nameField" fx:id="nameField" alignment="CENTER" prefHeight="0.0" prefWidth="0.0" text="Label">
+                  <TextField id="nameField" fx:id="nameField" alignment="CENTER" minWidth="10.0" prefHeight="11.0" prefWidth="11.0" text="Label">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </TextField>
-                  <Label fx:id="name" text="Label" textFill="#4072e8">
+                  <Label fx:id="name" alignment="CENTER" contentDisplay="CENTER" text="Label" textAlignment="CENTER" textFill="#4072e8">
                      <font>
                         <Font size="16.0" />
                      </font>
