--- a/topMenu.fxml
+++ b/topMenu.fxml
@@ -11,6 +11,7 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
               <MenuItem fx:id="save" mnemonicParsing="false" text="Save" />
+                  <MenuItem fx:id="saveAs" mnemonicParsing="false" text="SaveAs" />
                   <MenuItem fx:id="read" mnemonicParsing="false" text="Read" />
                   <MenuItem fx:id="readJava" mnemonicParsing="false" text="ReadJava" />
             </items>
