--- a/style/style.css
+++ b/style/style.css
@@ -84,6 +84,14 @@
    -fx-arc-height: 0;
    -fx-arc-width: 0;
 }
+.text-field {
+    -fx-background-color: transparent ;
+    -fx-alignment : center;
+}
+.text-field:focused {
+    -fx-background-color: transparent;
+    -fx-alignment : center;
+}
 
 #bottom_color_box{
    -fx-alignment: top-left;
